fixed x overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
   background-color: #ddd;
+  overflow-x: hidden;
 }
 
 .App {
